fix a11y low contrast in dark mode for code

--- a/scss/_utilities_muted-text.scss
+++ b/scss/_utilities_muted-text.scss
@@ -1,5 +1,9 @@
 @mixin vf-u-text-muted {
   .u-text--muted {
     @extend %muted-text;
+
+    code {
+      background-color: rgba($color-x-light, 0.15);
+    }
   }
 }
